Added Quality Time Examples

--- a/app/pages/time/time.html
+++ b/app/pages/time/time.html
@@ -9,7 +9,9 @@
 
     <ion-slide class="slide-quality">
       <ion-card class="card-quality">
-        <img src="img/quality.jpg"/>
+        <div class="container-banner">
+          <img class="banner" src="img/time/quality.jpg"/>
+        </div>
         <ion-card-content>
           <ion-card-title>
             Quality Time
@@ -24,11 +26,47 @@
     </ion-slide>
 
     <ion-slide class="slide-quality">
-      <h2>Slide 2</h2>
+      <ion-card class="card-quality">
+        <div class="container-banner">
+          <img class="banner" src="img/time/cafe.png"/>
+          <button fab class="btn-quality">
+            <ion-icon name="navigate"></ion-icon>
+          </button>
+        </div>
+        <ion-card-content>
+          <ion-item class="title">
+            <img class="logo" src="img/time/starbucks.png"/>
+            <h2>What about breakfast?</h2>
+            <p>Starbucks</p>
+          </ion-item>
+          <p>
+            There is a Starbucks right around the corner.
+            With this QR-Code you get 30% discount for your Café.
+          </p>
+        </ion-card-content>
+      </ion-card>
     </ion-slide>
 
     <ion-slide class="slide-quality">
-      <h2>Slide 3</h2>
+      <ion-card class="card-quality">
+        <div class="container-banner">
+          <img class="banner" src="img/time/audio.jpg"/>
+          <button fab class="btn-quality">
+            <ion-icon name="headset"></ion-icon>
+          </button>
+        </div>
+        <ion-card-content>
+          <ion-item class="title">
+            <img class="logo" src="img/time/audible.png"/>
+            <h2>What is your story?</h2>
+            <p>Audible</p>
+          </ion-item>
+          <p>
+            Create your Audible account now and get your first audio book for free
+            right away on your phone!
+          </p>
+        </ion-card-content>
+      </ion-card>
     </ion-slide>
 
   </ion-slides>
